--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.7.3",
     "selenium-webdriver": "^4.1.1",
     "sequelize": "^6.18.0"
   },
